--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
 <div>
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
-      <input matInput placeholder="Password" formControlName="mdp">
+      <input type="password" matInput placeholder="Password" formControlName="mdp">
 
     </mat-form-field>
 </div>
@@ -30,6 +30,8 @@
    </form>
    <span>Vous n'avez pas encore de compte?</span><br>
    <a routerLink="/entreprise/register">Créer un compte ici</a>
+   
+
    </mat-card-content>
    </mat-card>
   </section>
