--- a/src/app/components/login-salarie/login-salarie.component.scss
+++ b/src/app/components/login-salarie/login-salarie.component.scss
@@ -1,10 +1,18 @@
-section{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-div
-{
-    width:50vw;
 
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+align-items: center;
+   justify-content: center;
 }
+button{
+   width: 100%;
+}
+
+mat-card
+{background:white;}
+mat-form-field{
+    width: 100%;
+ }
