--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,6 @@
 
 .container{
+   
     width: 100%;
     height: 100%;
     display: flex;
@@ -11,5 +12,9 @@ button{
    width: 100%;
 }
 
+
 mat-card
 {background:white;}
+mat-form-field{
+   width: 100%;
+}
