--- a/src/app/components/login-salarie/login-salarie.component.html
+++ b/src/app/components/login-salarie/login-salarie.component.html
@@ -68,7 +68,7 @@
 
        </form>
        <span>Vous n'avez pas encore de compte?</span><br>
-       <a routerLink="/entreprise/register">Créer un compte ici</a>
+       <a routerLink="/salarie/register">Créer un compte ici</a>
        </mat-card-content>
        </mat-card>
       </section>
