--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -15,9 +15,9 @@
 
         <H1>Easy Contract</H1>
         <div class="button">
-          <a routerLink="/entreprise/login"> <button routerLinkActive="active" >Entreprise</button></a>
+          <a routerLink="/entreprise/login"> <button mat-button color="primary" routerLinkActive="active" >Entreprise</button></a>
 
-          <a routerLink="/salarie/login"><button routerLinkActive="active" >Salarie</button></a>
+          <a routerLink="/salarie/login"><button mat-button color="primary" routerLinkActive="active" >Salarie</button></a>
         </div>
       </mat-card-content>
     </mat-card>
