--- a/src/app/components/register-salarie/register-salarie.component.html
+++ b/src/app/components/register-salarie/register-salarie.component.html
@@ -41,7 +41,7 @@
                             <mat-label>
                                 Téléphone
                             </mat-label>
-                            <input matInput = formControlName="telephone">
+                            <input matInput formControlName="telephone">
                         </mat-form-field>
 
 
