--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
     <mat-nav-list>
 
       <a mat-list-item routerLink="/overview/profil" routerLinkActive="active" color="primary">
-        <mat-icon>account_circle</mat-icon>Profil
+        <mat-icon>account_circle</mat-icon>ProfilE
       </a>
       <a mat-list-item routerLink="/overview/salaries" routerLinkActive="active">
         <mat-icon>people</mat-icon>Gérer mes salariés
