--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -66,8 +66,10 @@
 
 
 
+<div>
+  <button mat-raised-button [disabled]="registerForm.invalid" color="primary" type="submit"   >Valider</button>
 
-            <button mat-raised-button [disabled]="registerForm.invalid" color="primary" type="submit"   >Valider</button>
+</div>
 
           </form>
         </div>
