--- a/src/app/components/register-salarie/register-salarie.component.scss
+++ b/src/app/components/register-salarie/register-salarie.component.scss
@@ -1,7 +1,26 @@
 
-
-mat-card{
-
-    background-color:white ;
+.container{
+    width:100%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+   align-content: center;
+   background:rgb(229, 229, 238);
+}
+.formulaire{
+    width:100%;
+    height:100%;
+    display: flex;
+    align-content: center;
 
 }
+mat-card{
+display: flex;
+flex-direction: column;
+    background-color:rgb(207, 153, 153) ;
+    align-content: center;
+    justify-content: center;
+    width:90%;
+
+}
+
