--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,8 +29,9 @@
 
    </form>
    <span>Vous n'avez pas encore de compte?</span><br>
-   <a routerLink="/entreprise/register">Créer un compte ici</a>
-   
+   <!-- <a routerLink="/entreprise/register">Créer un compte ici</a> -->
+   <a routerLink="/entreprise/register"> <button mat-raised-button  color="accent" type="submit">Inscription</button></a>
+
 
    </mat-card-content>
    </mat-card>
