--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,5 +1,5 @@
-<section>
 
+<section class="container">
   <div>
     <p>
       <mat-toolbar color="primary">
@@ -9,20 +9,21 @@
     </p>
   </div>
 
-  <div class="center">
-    <mat-card>
-      <mat-card-content>
+  <div class="test">
 
-        <H1>Easy Contract</H1>
-        <div class="button">
-          <a routerLink="/entreprise/login"> <button mat-button color="primary" routerLinkActive="active" >Entreprise</button></a>
-
-          <a routerLink="/salarie/login"><button mat-button color="primary" routerLinkActive="active" >Salarie</button></a>
-        </div>
-      </mat-card-content>
-    </mat-card>
-
-  </div>
-  <div>
+      <mat-card>
+        <mat-card-content>
+          <H1>Easy Contract</H1>
+          <div class="button">
+            <a routerLink="/entreprise/login"> <button mat-button color="primary"
+                routerLinkActive="active">Entreprise</button></a>
+            <a routerLink="/salarie/login"><button mat-button color="primary"
+                routerLinkActive="active">Salarie</button></a>
+          </div>
+        </mat-card-content>
+      </mat-card>
 
   </div>
+
+
+</section>
