--- a/src/app/components/register-salarie/register-salarie.component.scss
+++ b/src/app/components/register-salarie/register-salarie.component.scss
@@ -1,26 +1,12 @@
+section{background:white;}
 
-.container{
-    width:100%;
-    height:100%;
+h1{text-align: center;}
+
+form
+{
     display: flex;
     flex-direction: column;
-   align-content: center;
-   background:rgb(229, 229, 238);
+align-items: center;
 }
-.formulaire{
-    width:100%;
-    height:100%;
-    display: flex;
-    align-content: center;
-
-}
-mat-card{
-display: flex;
-flex-direction: column;
-    background-color:rgb(207, 153, 153) ;
-    align-content: center;
-    justify-content: center;
-    width:90%;
-
-}
+button{width: 100%;}
 
