--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,86 +1,107 @@
-<div class="form-container" layout="column">
-  <h1>Créer votre compte entreprise</h1>
-  <form class="container" [formGroup]="registerForm" (ngSubmit)="onSubmit()" layout="column">
-
-    <mat-form-field appearance="outline" class=" form-element">
-      <mat-label> Civilité
-      </mat-label>
-      <input matInput placeholder="Civilité" formControlName="civilite">
+<section>
+  <div class="form-container">
+    <h1>Créer votre compte entreprise</h1>
+    <form class="container" [formGroup]="registerForm" (ngSubmit)="onSubmit()" layout="column">
+     <div>
+      <mat-form-field appearance="outline" >
+        <mat-label>Civilité</mat-label>
+        <mat-select formControlName="civilite" >
+            <mat-option *ngFor="let item of civilite" [value]="item.value">
+                {{item.viewValue}}
+            </mat-option>
+        </mat-select>
     </mat-form-field>
+  </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Nom
+          </mat-label>
+          <input matInput placeholder="Nom" formControlName="nom">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Prénom
+          </mat-label>
+          <input matInput placeholder="Prénom" formControlName="prenom">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Téléphone
+          </mat-label>
+          <input matInput placeholder="Télephone" formControlName="telephone">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Rue
+          </mat-label>
+          <input matInput placeholder="Rue" formControlName="rue">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Code postal
+          </mat-label>
+          <input matInput placeholder="Cp" formControlName="cp">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Ville
+          </mat-label>
+          <input matInput placeholder="Ville" formControlName="ville">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label> Email
+          </mat-label>
+          <input matInput placeholder="Email" formControlName="email">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field class="form-field" appearance="outline">
+          <mat-label> Password
+          </mat-label>
+          <input type="password" matInput formControlName="mdp" required>
+          <mat-icon matSuffix>password</mat-icon>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field class="form-field" appearance="outline">
+          <mat-label> Confirme Password
+          </mat-label>
+          <input type="password" matInput formControlName="confirmmdp" required>
+          <mat-icon matSuffix>password</mat-icon>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>SIRET
+          </mat-label>
+          <input matInput placeholder="SIRET" formControlName="siret">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Raison sociale
+          </mat-label>
+          <input matInput placeholder="raison_sociale" formControlName="raison_sociale">
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Code APE
+          </mat-label>
+          <input matInput placeholder="Code APE" formControlName="code_ape">
+        </mat-form-field>
+      </div>
+      <div >
+        <button mat-raised-button [disabled]="registerForm.invalid" color="primary" type="submit">Valider</button>
+      </div>
 
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Nom
-      </mat-label>
-      <input matInput placeholder="Nom" formControlName="nom">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Prénom
-      </mat-label>
-      <input matInput placeholder="Prénom" formControlName="prenom">
-    </mat-form-field>
-
-
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Téléphone
-      </mat-label>
-      <input matInput placeholder="Télephone" formControlName="telephone">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Rue
-      </mat-label>
-      <input matInput placeholder="Rue" formControlName="rue">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Code postal
-      </mat-label>
-      <input matInput placeholder="Cp" formControlName="cp">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Password
-      </mat-label>Ville
-      <input matInput placeholder="Ville" formControlName="ville">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <mat-label> Email
-      </mat-label>
-      <input matInput placeholder="Email" formControlName="email">
-    </mat-form-field>
-
-    <mat-form-field class="form-field" appearance="outline">
-      <mat-label> Password
-      </mat-label>
-      <input matInput formControlName="mdp" required>
-      <mat-icon matSuffix>password</mat-icon>
-    </mat-form-field>
-
-    <mat-form-field class="form-field" appearance="outline">
-      <mat-label> Confirme Password
-      </mat-label>
-      <input matInput formControlName="confirmmdp" required>
-      <mat-icon matSuffix>password</mat-icon>
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <input matInput placeholder="SIRET" formControlName="siret">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <input matInput placeholder="raison_sociale" formControlName="raison_sociale">
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="form-element">
-      <input matInput placeholder="Code APE" formControlName="code_ape">
-    </mat-form-field>
-
-    <div>
-      <button mat-raised-button [disabled]="registerForm.invalid" color="primary" type="submit">Valider</button>
-
-    </div>
-
-  </form>
-</div>
+    </form>
+  </div>
+</section>
